--- a/MDS/index.html
+++ b/MDS/index.html
@@ -9,54 +9,7 @@
       <link rel="mask-icon" href="favicon_icons//safari-pinned-tab.svg" color="#5bbad5">
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="theme-color" content="#ffffff">
-      
-        <style>
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
-
-/* Global */
-html {
-  min-height: 100%;
-  overflow-y: scroll; /* Permette lo scorrimento verticale */
-}
-body {
-  padding: 4em;
-  color: rgba(255,255,255,.75);
-  font-family: 'Anonymous Pro', monospace;  
-  background-color: rgb(25,25,25);  
-}
-.line-1 {
-    position: relative;
-    top: 0.7%;  
-    width: 24em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(-50%);    
-}
-
-.homebutton {
-                display: flex; /* Utilizza il layout flessibile */
-                align-items: center; /* Allinea verticalmente al centro */
-                justify-content: center; /* Allinea orizzontalmente al centro */
-            }
-
-/* Animation */
-.anim-typewriter {
-  animation: typewriter 4s steps(44) 1s 1 normal both,
-             blinkTextCursor 500ms steps(44) infinite normal;
-}
-@keyframes typewriter {
-  from { width: 0; }
-  to { width: 26em; }
-}
-@keyframes blinkTextCursor {
-  from { border-right-color: rgba(255,255,255,.75); }
-  to { border-right-color: transparent; }
-}
-        </style>
+        <link rel="stylesheet" href="MDS.css">
     </head>
     <body>
       <div class="homebutton">
