--- a/SYSCOM/MANUALE-SYSCOM-CLI.html
+++ b/SYSCOM/MANUALE-SYSCOM-CLI.html
@@ -4,48 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manuale SYSCOM</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon_icons/SYSCOM/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./favicon_icons/SYSCOM/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon_icons/SYSCOM/favicon-16x16.png">
-<link rel="manifest" href="./favicon_icons/SYSCOM/site.webmanifest">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-    <style>
-        body {
-            font-family: 'Courier New', Courier, monospace;
-            font-size: 16px;
-            line-height: 1;
-            margin: 15px;
-        }
-
-        ul, ol {
-            margin-bottom: 20px;
-        }
-
-        li {
-            margin-bottom: 10px;
-            font-size: 20px;
-            margin: 20px;
-        }
-
-        code {
-            background-color: #f4f4f421;
-            padding: 2px 6px;
-            border-radius: 4px;
-        }
-        li img {
-            display: block; /* Imposta l'immagine come blocco */
-        }
-        .homebutton {
-                display: flex; /* Utilizza il layout flessibile */
-                align-items: center; /* Allinea verticalmente al centro */
-                justify-content: center; /* Allinea orizzontalmente al centro */
-            }
-            .step { margin-bottom: 40px; }
-  .step img { max-width: 100%; height: auto; }
-  .step p { margin: 10px 0; font-size: 20px; }
-  .important { font-weight: bold; }
-    </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon_icons/SYSCOM/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon_icons/SYSCOM/favicon-16x16.png">
+    <link rel="manifest" href="../favicon_icons/SYSCOM/site.webmanifest">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon_icons/SYSCOM/favicon-32x32.png">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="Manuale.css"></link>
 </head>
 <body BGCOLOR="#0c0c0c" text="#cccccc">
     <div class="homebutton">
