--- a/MDS/Credits.html
+++ b/MDS/Credits.html
@@ -8,59 +8,12 @@
       <link rel="mask-icon" href="/favicon_icons//safari-pinned-tab.svg" color="#5bbad5">
       <meta name="msapplication-TileColor" content="#da532c">
       <meta name="theme-color" content="#ffffff">
-      
-        <style>
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
-
-/* Global */
-html {
-  min-height: 100%;
-  overflow-y: scroll; /* Permette lo scorrimento verticale */
-}
-body {
-  padding: 4em;
-  color: rgba(255,255,255,.75);
-  font-family: 'Anonymous Pro', monospace;  
-  background-color: rgb(25,25,25);  
-}
-.line-1 {
-    position: relative;
-    top: 1%;  
-    width: 23em;
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(0%);
-}
-
-.homebutton {
-                display: flex; /* Utilizza il layout flessibile */
-                align-items: center; /* Allinea verticalmente al centro */
-                justify-content: center; /* Allinea orizzontalmente al centro */
-            }
-
-/* Animation */
-.anim-typewriter {
-  animation: typewriter 1s steps(43) 1s 1 normal both,
-             blinkTextCursor 500ms steps(43) infinite normal;
-}
-@keyframes typewriter {
-  from { width: 0; }
-  to { width: 4em; }
-}
-@keyframes blinkTextCursor {
-  from { border-right-color: rgba(255,255,255,.75); }
-  to { border-right-color: transparent; }
-}
-        </style>
+        <link rel="stylesheet" href="Credits.css">
     </head>
     <body>
       <div class="homebutton">
         <a href="https://vittoriaalata.github.io/VWS/">
-            <img src="https://vittoriaalata.github.io/VWS/images/logo.png" width="150" height="150"/>
+            <img src="https://vittoriaalata.github.io/VWS/images/logo.svg" width="350" height="350"/>
         </a>
         </div>
         <p class="line-1 anim-typewriter">Crediti</p>
