Fix MDS Credits & ArcaTele

--- a/ArcaTele/index.html
+++ b/ArcaTele/index.html
@@ -13,6 +13,6 @@
     <link rel="stylesheet" href="ArcaTele.css">
 </head>
 <body>
-    <h1><a href="./It.html">MAPPA ITALIA</a></h1>
+    <h1><a href="./It">MAPPA ITALIA</a></h1>
 </body>
 </html>
