--- a/MDS/index.html
+++ b/MDS/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Acquisto Macchina da Scrivere</title>
+        <meta charset="UTF-8">
+        <title>Acquisto Macchina da Scrivere</title>
       <link rel="apple-touch-icon" sizes="180x180" href="favicon_icons//apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="favicon_icons//favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="favicon_icons//favicon-16x16.png">
