--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Viktorija</title>
+    <meta charset="UTF-8">
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_icons//apple-touch-icon.png">
@@ -16,7 +17,43 @@
 </head>
 <body>
     <div class="container">
-        <img src="images/logo.svg" width="730" height="730">
+        <img src="immagine.jpg" width="800" height="800" alt="
+─▄█████████████████████▄▄╓┌──────────────────────────┌╓▄▄▄█████████████████████─&#10;
+▐██████████████████████████████▄▄┌────────────┌▄▄██████████████████████████████▌&#10;
+█████████████████████████████████████▄▄┌┌▄▄█████████████████████████████████████&#10;
+████████████▌────────┌┌╔▄▄▄██████████▀▄▌▐█▀██████████▄▄▄▄┌─────────▐████████████&#10;
+████████████─┌╓▄▄████████████████▀╙─▄██──▀█▄─└▀█████████████████▄╓┌─▀███████████&#10;
+████████▀▀╘███████████████████▀───▄███────███▄───└▀██████████████████┘▀▀████████&#10;
+██████▌───████████████████▀╘───╓▄████╛─────█████╓───└▀████████████████───▐██████&#10;
+██████▌──╒█████████████▀└────╓██████▌──────▐██████▄────└▀█████████████▌──▐██████&#10;
+██████▌──████████████▀─────▄████████────────████████▄─────▀████████████──▐██████&#10;
+╘█████▌─▐██████████▀─────▄█████████═─────────█████████▄─────▀██████████▌─▐█████▌&#10;
+─█████▌─█████████▀─────▄███████████──────────▀██████████▄─────▀█████████─▐█████─&#10;
+─▐████▌╒███████▀────╓▄████████████────────────█████████████╓────▀███████▌▐████▌─&#10;
+──████▌███████────╓███████████████────────────▀██████████████▄────███████▐████──&#10;
+──└███▌█████▀───▄████████████████═─────────────████████████████▄───▀█████▐███▌──&#10;
+───▀██▌████───▄██████████████████──────────────██████████████████▄───████▐███───&#10;
+────█████▀──▄███████████▀▀▀▀╙────█████▄╓╓▄█████═───└▀▀▀████████████▄──▀█████────&#10;
+─────███▀╓▄█████▀▀▀└─────────────████▀└──└▀████──────────────▀▀▀██████╓▀███─────&#10;
+─────└█▌██▀▀└─────────────────────█▀────────▀█──────────────────────▀▀▀█▄█╜─────&#10;
+──────█╨▄╓┌───────────────────────▄┐────────┌▄───────────────────────┌╓▄▄█──────&#10;
+─────███─▀████▄▄╓────────────────▐███┌────┌████────────────────┌▄▄█████─███─────&#10;
+────▐████╕─▀█████████▄▄▄╓┌───────██████╤═██████───────┌╓▄▄▄█████████▀─┌████▌────&#10;
+───╒██▌███▄──▀███████████████████▀▀▀╙──────└▀▀▀▄▄█████████████████▀──▄███▀██▄───&#10;
+───███▌█████───╙█████████████████──────────────█████████████████▀───▄████▐███───&#10;
+──████▌██████▄───└███████████████▌────────────▐███████████████╙───╓██████═████──&#10;
+─╒████▌▐███████─────▀█████████████────────────██████████████─────███████▌═████▄─&#10;
+─█████▌─████████▄─────▀███████████▌──────────╒███████████▀─────▄████████─═█████─&#10;
+─█████▌─▀█████████▄─────▀██████████──────────██████████▀─────▄██████████─═█████─&#10;
+▐█████▌──███████████▄─────╙████████▌────────▐████████▀─────▄███████████──═█████▌&#10;
+██████▌──▐█████████████┌────└███████───────┌███████╙────┌█████████████▌──═██████&#10;
+██████▌───███████████████▄┌────▀█████──────██████────┌▄███████████████───═██████&#10;
+███████▄┌─╘█████████████████▄┌───▀████────▄███▀───┌▄█████████████████▌─┌╓███████&#10;
+███████████▌▀▀▀████████████████▄▄──▀██▌──╓██▀──╔██████████████████▀▀▀███████████&#10;
+████████████───────▀▀▀▀████████████▄▄▀█╕╒█▀╓▄████████████▀▀▀▀──────┌████████████&#10;
+█████████████▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄███████████▀▀▀██████████▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄█████████████&#10;
+▐████████████████████████████████▀▀╙────────└▀▀████████████████████████████████▌&#10;
+─████████████████████████▀▀▀▀──────────────────────▀▀▀█████████████████████████▀&#10;">
         <div class="Home-Page playfair-display-home-page">
             <h1 style="font-size: 100px;">Vittoria Web</h1>
             <ul style="font-size: 22px;">
