--- a/MDS/Credits.html
+++ b/MDS/Credits.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <link rel="apple-touch-icon" sizes="180x180" href="/favicon_icons/apple-touch-icon.png">
+        <meta charset="UTF-8">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon_icons/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/favicon_icons/favicon-32x32.png">
       <link rel="icon" type="image/png" sizes="16x16" href="/favicon_icons/favicon-16x16.png">
       <link rel="manifest" href="/favicon_icons/site.webmanifest">
