--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
 <body>
     <div class="container">
         <a href="https://vittoriaalata.github.io/VWS/">
-            <svg width="800" height="800" viewBox="0 0 2260 2261" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="800" height="800" alt="404 LOGO IMAGE"viewBox="0 0 2260 2261" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="Disegno">
                     <g id="alto_sinistra">
                         <path id="orecchio3_4" d="M1130 982.402C1055.02 1030.68 1023.08 1061.6 978.512 1130.5C938.32 1056.53 922.799 1015.56 922.517 927.367C1005.83 926.862 1051.41 937.524 1130 982.402Z" fill="#262626"/>
