--- a/MDS/Credits.html
+++ b/MDS/Credits.html
@@ -12,11 +12,16 @@
         <link rel="stylesheet" href="Credits.css">
     </head>
     <body>
-      <div class="homebutton">
-        <a href="https://vittoriaalata.github.io/VWS/">
-            <img src="https://vittoriaalata.github.io/VWS/images/logo.svg" width="350" height="350"/>
+    <div class="homebutton">
+        <a href="../">
+            <img src="../images/logo.png" width="100" height="100"/>
         </a>
-        </div>
+    </div>
+      <div class="returnbutton">
+          <a href="./">
+              <img src="../images/return.svg" width="100" height="100"/>
+          </a>
+      </div>
         <p class="line-1 anim-typewriter">Crediti</p>
         <h1>Ringraziamenti</h1>
         <p>Ringrazio <a href="https://css-tricks.com/snippets/css/typewriter-effect/" style="color: rgba(255,255,255,.75);">Geoff Graham</a> per l'animazione testuale della macchina da scrivere.</p>
