--- a/MDS/index.html
+++ b/MDS/index.html
@@ -13,11 +13,11 @@
         <link rel="stylesheet" href="MDS.css">
     </head>
     <body>
-      <div class="homebutton">
-        <a href="https://vittoriaalata.github.io/VWS/">
-            <img src="https://vittoriaalata.github.io/VWS/images/logo.png" width="100" height="100"/>
+    <div class="homebutton">
+        <a href="../">
+            <img src="../images/logo.png" width="100" height="100"/>
         </a>
-        </div>
+    </div>
         <p class="line-1 anim-typewriter">Guida all'acquisto di una Macchina da Scrivere</p>
         <h1>Controlli da effettuare prima di acquistare una macchina da scrivere</h1>
         <p>In questo articolo tratteremo le cinque cose fondamentali da valutare prima di acquistare una macchina da scrivere. Questi controlli ti aiuteranno ad evitare spiacevoli sorprese.</p>
