--- a/SYSCOM/MANUALE-CLI.html
+++ b/SYSCOM/MANUALE-CLI.html
@@ -12,12 +12,17 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="Manuale.css"></link>
 </head>
-<body BGCOLOR="#0c0c0c" text="#cccccc">
+<body>
     <div class="homebutton">
-        <a href="https://vittoriaalata.github.io/VWS/">
-            <img src="https://vittoriaalata.github.io/VWS/images/logo.png" width="100" height="100"/>
+        <a href="../">
+            <img src="../images/logo.png" width="100" height="100"/>
         </a>
         </div>
+    <div class="returnbutton">
+        <a href="./">
+            <img src="../images/return.svg" width="100" height="100"/>
+        </a>
+    </div>
 <h1>Libretto d'istruzioni per SYSCOM</h1>
 <p>Segui le seguenti istruzioni per utilizzare SYSCOM sul tuo computer.</p>
 
@@ -29,38 +34,38 @@
     <li>Dopo aver installato Powershell, puoi verificarne la versione digitando "<code>pwsh.exe</code>" nella barra di ricerca e premendo Invio.</li>
 </ul>
 <h1>Come avviare SYSCOM sul tuo computer</h1>
-  
+
 <div class="step">
   <h2>Passo 1: Installazione di SYSCOM</h2>
   <p>Fai doppio click sul file <span class="important">SYSCOM.msi</span> per iniziare l'installazione.</p>
-  <img src="https://vittoriaalata.github.io/VWS/Libretto/MSI Download.png" alt="Doppio click su SYSCOM.msi">
-  <img src="https://vittoriaalata.github.io/VWS/Libretto/INSTALLATION.png" alt="Installa SYSCOM e accetta la Autorizzazione">
+  <img src="../images/Libretto/MSI Download.png" alt="Doppio click su SYSCOM.msi">
+  <img src="../images/Libretto/INSTALLATION.png" alt="Installa SYSCOM e accetta la Autorizzazione">
 </div>
 
 
 <div class="step">
   <h2>Passo 2: Avvio di SYSCOM</h2>
   <p>Dopo l'installazione, fai doppio click sul collegamento di SYSCOM sul desktop per avviare il programma.</p>
-  <img src="https://vittoriaalata.github.io/VWS/Libretto/SHORTCUT.png" alt="Doppio click sul collegamento di SYSCOM">
+  <img src="../images/Libretto/SHORTCUT.png" alt="Doppio click sul collegamento di SYSCOM">
 </div>
 
 <div class="step">
   <h2>Passo 3: Autorizzazione dell'esecuzione dello script</h2>
   <p>Quando richiesto, autorizza l'esecuzione dello script con la firma specifica.</p>
-  <img src="https://vittoriaalata.github.io/VWS/Libretto/CERT ACCEPT.png" alt="Autorizzazione script">
+  <img src="../images/Libretto/CERT ACCEPT.png" alt="Autorizzazione script">
 </div>
 
 <div class="step">
   <h2>Passo 4: Conferma delle modifiche</h2>
   <p>Se viene richiesto di apportare modifiche al tuo sistema, clicca <span class="important">Sì</span> per confermare.</p>
-  <img src="https://vittoriaalata.github.io/VWS/Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
+  <img src="../images/Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
 </div>
 
 <div class="step">
     <h2>Passo 5: Avvia SYSCOM</h2>
     <p>Se viene richiesto di apportare modifiche al tuo sistema, clicca <span class="important">Sì</span> per confermare.</p>
-    <img src="https://vittoriaalata.github.io/VWS/Libretto/SHORTCUT.png" alt="Conferma modifiche sistema">
-    <img src="https://vittoriaalata.github.io/VWS/Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
+    <img src="../images/Libretto/SHORTCUT.png" alt="Conferma modifiche sistema">
+    <img src="../images/Libretto/CONFIRM.png" alt="Conferma modifiche sistema" width="273,3" height="232">
 </div>
 
 <!--<h2>2. Installa SYSCOM</h2>
@@ -75,7 +80,7 @@
 <br>
 <br>
 <br>
-<h2>Se qualcosa dovesse essere andato storto apri una issues su GitHub:</h3>
+<h2>Se qualcosa dovesse essere andato storto apri una issues su GitHub:</h2>
 <a href=https://github.com/VittoriaAlata/VWS/issues><img alt="Issues" src="https://img.shields.io/github/issues/VittoriaAlata/VWS?style=social&label=Issues&link=https://github.com/VittoriaAlata/VWS">
 <!--<h2>OPPURE</h2>
 
