--- a/SYSCOM/index.html
+++ b/SYSCOM/index.html
@@ -20,8 +20,8 @@
 </head>
 <body>
     <div class="homebutton">
-        <a href="https://vittoriaalata.github.io/VWS/">
-            <img src="../images/logo.png" alt="HOMEBUTTON" height="100" width="100"/>
+        <a href="../">
+            <img src="../images/logo.png" alt="Home Button" height="100" width="100"/>
         </a>
     </div>
     <h1 class="titolo">SYSCOM - System Commander</h1>
@@ -52,11 +52,7 @@
                     <button class="BUTTON_TUI" role="button" disabled style="margin-left: 25px;
                     margin-right: 25px;">ƒ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Download&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ƒ</button>
                 </a>
-            <a class="no-link-style">
-                <button class="BUTTON_TUI_FAKE" role="button" disabled>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                </button>
-            </a>
+            <p></p>
             <a class="no-link-style">
                 <button class="BUTTON_TUI" role="button" disabled style="margin-left: 25px;
                     margin-right: 25px;">ƒ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manuale&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ƒ</button>
