--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1 style="font-size: 100px;">Vittoria Web</h1>
             <ul style="font-size: 22px;">
                 <li><h2><a href="./SYSCOM" style="text-decoration: none;" class="no-link-color" >SYSCOM</a></h2></li>
-                <li><h2><a href="./ArcaTele" style="text-decoration: none;" class="dis" >ArcaTele</a></h2></li>
+                <li><h2><a href="" style="text-decoration: none;" class="dis" >ArcaTele</a></h2></li>
                 <li><h2><a href="./MDS" style="text-decoration: none;" class="no-link-color" >Macchina da Scrivere</a></h2></li>
                 <li><h2><a href="https://modrinth.com/user/Vittoria" style="text-decoration: none" class="no-link-color">Resourcepacks</a></h2></li>
             </ul>
