--- a/404.html
+++ b/404.html
@@ -4,14 +4,14 @@
     <title>404 :(</title>
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_icons//apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_icons//favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_icons//favicon-16x16.png">
-    <link rel="manifest" href="favicon_icons//site.webmanifest">
-    <link rel="mask-icon" href="favicon_icons//safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_icons/404/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_icons/404/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_icons/404/favicon-16x16.png">
+    <link rel="manifest" href="favicon_icons/404/site.webmanifest">
+    <link rel="mask-icon" href="favicon_icons/404/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="https://vittoriaalata.github.io/VWS/index.css">
+    <link rel="stylesheet" href="./index.css">
 
 </head>
 <style>
