SYSCOM PAGES for text-browsers

--- a/SYSCOM/index.html
+++ b/SYSCOM/index.html
@@ -50,12 +50,12 @@
             <div class="button-container">
                 <a  onclick="" target="_blank" class="no-link-style">
                     <button class="BUTTON_TUI" role="button" disabled style="margin-left: 25px;
-                    margin-right: 25px;">ƒ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Download&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ƒ</button>
+                    margin-right: 25px;">ƒ.............Download..............ƒ</button>
                 </a>
             <p></p>
             <a class="no-link-style">
                 <button class="BUTTON_TUI" role="button" disabled style="margin-left: 25px;
-                    margin-right: 25px;">ƒ&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Manuale&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ƒ</button>
+                    margin-right: 25px;">ƒ.............Manuale...............ƒ</button>
             </a>
         </div>
     </div>
@@ -2239,8 +2239,20 @@
                 </div>
             <p>SYSCOM CLI ha portato une evoluzione con sè, è stato il passaggio dalla primordiale VISO (Verificatore Integrità del Sistema Operativo) alla nuova interfaccia grafica basata su Menu (funzioni), che ha portato alla professionalità e allo sviluppo di nuove idee.</p>
             <p>VISO è stato l'inizio, SYSCOM è stata la sua diretta figlia, ancora ad oggi se si scrive VISO nel prompt della prima schermata della SYSCOM si può utilizzare in maniera completa quello che era una volta un progetto che doveva durare solo 3 o 4 righe di codice.</p>
+            </div>
+        <div class="terminale">
+<pre>
+┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
+┃                                                               ┃
+┃1.  Download       (Scarica l'ultima versione di SYSCOM CLI)   ┃
+┃2.  Manuale        (Scopri come installare e utilizzare SYSCOM)┃
+┃                                                               ┃
+┣━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┫
+┃ Inserisci il numero per l'operazione                          ┃
+┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
+</pre>
+
         </div>
-        <img src="../images/SYSCOM_CLI_Switch.png" alt="SYSCOM-CLI-Switch"/>
            <div class="terminal">
             <h2>: </h2>
             <form onsubmit="handleInput(event)">
@@ -2263,7 +2275,23 @@
         <div class="image-container">
             <img src="../images/SYSCOM-CLI-Stato-Attuale.svg" alt="SYSCOM-CLI-Stato-Attuale">
             </div>
+        <div class="courier-prime-regular">
+            <p>Se stai visualizzando la pagina in un text-browser che non supporta javascript ecco i pulsanti diretti per il download dei files di SYSCOM CLI:</p>
+            <div class="button-container">
+                <form action="./SYSCOM.0.0.4.MSI" method="get">
+                    <button class="BUTTON_CLI" role="button" style="margin-left: 25px; margin-right: 25px;">§*.*.*.*.*.*.*Download.*.*.*.*.*.*.*§</button>
+                </form>
+                <p></p>
+                <form action="./CERT.SYSCOM.v0.0.4.pdf" method="get">
+                    <button class="BUTTON_CLI" role="button" style="margin-left: 25px; margin-right: 25px;">§*.*.*.*.*.*Certificato*.*.*.*.*.*.*§</button>
+                </form>
+                <p></p>
+                <form action="./MANUALE-CLI" method="get">
+                    <button class="BUTTON_CLI" role="button" style="margin-left: 25px; margin-right: 25px;">§*.*.*.*.*.*.*Manuale*.*.*.*.*.*.*.*§</button>
+                </form>
+            </div>
+        </div>
+            </div>
     </div>
-</div>
 </body>
 </html>
