Renaming Old classes and updated SYSCOM-CLI-MAP

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <title>Viktorija</title>
     <meta charset="UTF-8">
 
-
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_icons//apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_icons//favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon_icons//favicon-16x16.png">
@@ -17,10 +16,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="./images/logo.svg" width="800" height="800" alt="Vittoria Web Service Logo">
-        <div class="Home-Page playfair-display-home-page">
-            <h1 style="font-size: 100px;">Vittoria Web</h1>
-            <ul style="font-size: 22px;">
+        <img class="VWSL" src="./images/logo.svg" alt="Vittoria Web Service Logo">
+        <div class="Menu">
+            <h1 class="Titolo">Vittoria Web</h1>
+            <ul class="Link-ipertestuali">
                 <li><h2><a href="./SYSCOM" style="text-decoration: none;" class="no-link-color" >SYSCOM</a></h2></li>
                 <li><h2><a href="" style="text-decoration: none;" class="dis" >ArcaTele</a></h2></li>
                 <li><h2><a href="./MDS" style="text-decoration: none;" class="no-link-color" >Macchina da Scrivere</a></h2></li>
