Updated SYSCOM links

--- a/SYSCOM/index.html
+++ b/SYSCOM/index.html
@@ -2278,11 +2278,16 @@
         <div class="courier-prime-regular">
             <p>Se stai visualizzando la pagina in un text-browser che non supporta javascript ecco i pulsanti diretti per il download dei files di SYSCOM CLI:</p>
             <div class="button-container">
-                <form action="./SYSCOM.0.0.4.MSI" method="get">
+                <form action="https://github.com/VittoriaAlata/SYSCOM/releases/download/v0.0.4/SYSCOM.0.0.4.MSI" method="get">
                     <button class="BUTTON_CLI" role="button" style="margin-left: 25px; margin-right: 25px;">§*.*.*.*.*.*.*Download.*.*.*.*.*.*.*§</button>
                 </form>
                 <p></p>
-                <form action="./CERT.SYSCOM.v0.0.4.pdf" method="get">
+                <div class="button-container">
+                    <form action="https://github.com/VittoriaAlata/SYSCOM/releases/download/v0.0.4/SYSCOM.0.0.4.MSI.sha256" method="get">
+                        <button class="BUTTON_CLI" role="button" style="margin-left: 25px; margin-right: 25px;">§*.*.*.*.*.*.*.SHA256*.*.*.*.*.*.*.*§</button>
+                    </form>
+                    <p></p>
+                <form action="https://github.com/VittoriaAlata/SYSCOM/releases/download/v0.0.4/CERT.SYSCOM.v0.0.4.pdf" method="get">
                     <button class="BUTTON_CLI" role="button" style="margin-left: 25px; margin-right: 25px;">§*.*.*.*.*.*Certificato*.*.*.*.*.*.*§</button>
                 </form>
                 <p></p>
