--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
         <div class="Menu">
             <h1 class="Titolo">Vittoria Web</h1>
             <ul class="Link-ipertestuali">
-                <li><h2><a href="./SYSCOM" style="text-decoration: none;" class="no-link-color" >SYSCOM</a></h2></li>
-                <li><h2><a href="" style="text-decoration: none;" class="dis" >ArcaTele</a></h2></li>
+                <li><h2><a href="./Dipinti" style="text-decoration: none" class="no-link-color">Dipinti</a></h2></li>
                 <li><h2><a href="./MDS" style="text-decoration: none;" class="no-link-color" >Macchina da Scrivere</a></h2></li>
+                <li><h2><a href="./SYSCOM" style="text-decoration: none;" class="no-link-color" >SYSCOM</a></h2></li>
                 <li><h2><a href="https://modrinth.com/user/Vittoria" style="text-decoration: none" class="no-link-color">Resourcepacks</a></h2></li>
+                <li><h2><a href="" style="text-decoration: none;" class="dis" >ArcaTele</a></h2></li>
             </ul>
                 <h3 style="text-align: center;"><a href="https://github.com/VittoriaAlata" class="no-link-color">Autrice</a></h3>
           <hr class="small-hr">
