Fix MDS line-1 mobile adapt. bug

--- a/MDS/index.html
+++ b/MDS/index.html
@@ -18,7 +18,7 @@
             <img src="../images/logo.png" width="100" height="100"/>
         </a>
     </div>
-        <p class="line-1 anim-typewriter">Guida all'acquisto di una Macchina da Scrivere</p>
+        <p class="line-1 anim-typewriter">Guida all'acquisto<br>Macchina da Scrivere</p>
         <h1>Controlli da effettuare prima di acquistare una macchina da scrivere</h1>
         <p>In questo articolo tratteremo le cinque cose fondamentali da valutare prima di acquistare una macchina da scrivere. Questi controlli ti aiuteranno ad evitare spiacevoli sorprese.</p>
         <h2>1. Il corretto funzionamento del carrello</h2>
