--- a/Dipinti/index.html
+++ b/Dipinti/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SYSCOM</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Dipinti.css">
-
-<link rel="apple-touch-icon" sizes="180x180" href="../favicon_icons/SYSCOM/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="../favicon_icons/SYSCOM/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="../favicon_icons/SYSCOM/favicon-16x16.png">
-<link rel="manifest" href="../favicon_icons/SYSCOM/site.webmanifest">
-<meta name="msapplication-TileColor" content="#da532c">
-<meta name="theme-color" content="#ffffff">
-<script src="SYSCOM-CLI.js"></script>
-<script src="SYSCOM-CLI-INPUT.js"></script>
-</head>
+    <head>
+        <title>Viktorija/Dipinti</title>
+        <meta charset="UTF-8">
+    
+        <link rel="apple-touch-icon" sizes="180x180" href="./favicon_icons//apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./favicon_icons//favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./favicon_icons//favicon-16x16.png">
+        <link rel="manifest" href="./favicon_icons//site.webmanifest">
+        <link rel="mask-icon" href="./favicon_icons//safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+        <link rel="stylesheet" href="Dipinti.css"></link>
+    
+    </head>
 <body>
     <div class="homebutton">
         <a href="../">
